[gd_scene load_steps=5 format=3 uid="uid://qncxhjgx1wsg"]

[ext_resource type="Script" path="res://MagnetBall.gd" id="1_0f4kr"]
[ext_resource type="Texture2D" uid="uid://cf3fmruikvxqt" path="res://art/MagnetBall.png" id="2_oo7bb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_noyki"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wdvcb"]
radius = 635.064

[node name="MagnetBall" type="RigidBody2D"]
mass = 2.15
script = ExtResource("1_0f4kr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oo7bb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_noyki")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wdvcb")

[connection signal="body_entered" from="Area2D" to="." method="_on_MetalEntered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_MetalExited"]
